added a clickly thingy

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -5,7 +5,7 @@
   <% include ./partials/_header %>
 </head>
 <body>
-  <h2> Shorted URLs Only </h2>
+  <h2> Shortened URLs Only </h2>
 
   <ul>
     <%= shortURL %>
