--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -10,7 +10,10 @@
   <ul>
     <% for (let key in urls) { %>
       <li><%= key %> --- <%= urls[key] %> </li>
+      <form method="POST" action="/urls/<%= key%>/delete">
+      <button type="submit">Delete</button>
     <% } %>
+      </form>
   </ul>
     <a href = "/">Link for Shorted URLs</a>
 
