--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -22,7 +22,7 @@
     <ul class="nav navbar-nav">
       <form  action="/login"method="POST" style="margin:150px;">
         <label for="username"> Login</label>
-      <input id="name" type"=text" name="username" placeholder="enter username here">
+      <input id="name" type="text" name="username" placeholder="enter username here">
       <input type="submit" value="send">
     </form>
     <% } else { %>
