added cookie user_id to POST /login

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,9 +1,12 @@
 <!-- views/partials/_header.ejs -->
 
 <meta charset="UTF-8">
-<title>Super Pawesome</title>
+<title>Tiny App</title>
 
 <link rel= "stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+
+<a href="/register">Register</a>
+<a href="/login">Login</a>
 
 <style>
   body {padding-top: 50px; }
@@ -20,7 +23,7 @@
     <% if (!username) { %>
     <h6>Currently not logged in</h6>
     <ul class="nav navbar-nav">
-      <form  action="/login"method="POST" style="margin:150px;">
+      <form  action="/login"method="POST" style="margin:75px;">
         <label for="username"> Login</label>
       <input id="name" type="text" name="username" placeholder="enter username here">
       <input type="submit" value="send">
@@ -28,7 +31,7 @@
     <% } else { %>
      <ul class="nav navbar-nav">
       <h6>Currently logged in as: <%= username%></h6>
-      <form  action="/logout"method="POST" style="margin:150px;">
+      <form  action="/logout"method="POST" style="margin:75px;">
         <label for="username"> Logout</label>
       <input id="name" type"=text" name="username" placeholder= "<%= username%>">
       <input type="submit" value="Clear">
