--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -3,6 +3,9 @@
 <head>
   <title>TinyApp</title>
   <% include ./partials/_header %>
+  <% if (user) { %>
+
+
 </head>
 <body>
   <h2> List URLs: Shorted to ID --- full URL </h2>
@@ -15,8 +18,9 @@
     <% } %>
       </form>
   </ul>
-  <% username%>
+
     <a href = "/">Link for Shorted URLs</a>
 
 </body>
+<% } %>
 </html>
