--- a/views/login.ejs
+++ b/views/login.ejs
@@ -5,7 +5,7 @@
 
   </head>
   <body style="font-size:20px; padding:50px;">
-    <% if (!username) { %>
+    <% if (!user) { %>
     <h1>My Awesome Log in page</h1>
     <form action="/login" method="POST" style="margin:150px;">
       <label for="email"> Enter e-mail to log-in:</label>
@@ -19,7 +19,7 @@
       </form>
       <% } else { %>
        <ul class="nav navbar-nav">
-      <h6>Currently logged in as: <%= username%></h6>
+      <h6>Currently logged in as: <%= user %></h6>
      <!--  <form  action="/logout"method="POST" style="margin:75px;"> -->
         <label for="username"> Logout</label>
       <input id="name" type"=text" name="username" placeholder= "<%= username%>">
