absolutely works fine! XD

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -4,14 +4,16 @@
   <title>TinyApp</title>
   <% include ./partials/_header %>
 </head>
-<body> <a href = "/urls/new">click here to create your own!</a>
+<body>
+
 <h1> List shortened URLS and Long URLs</h1>
   <% for (let shortUrl in urls) { %>
     <% var longUrl = urls[shortUrl] %>
 
     <li>
 
-      <div> <%= shortUrl %> - <%= longUrl %> </div>
+      <div> <%= shortUrl %> - <a href = "/u/<%= shortUrl %>" target="_blank"><%= longUrl %></a></div>
+
 
 
       <form method="POST" action="/urls/<%=shortUrl%>/delete">
@@ -19,11 +21,12 @@
         <button type="submit">Delete</button>
         <a href="/urls/<%= shortUrl %>">Edit</a>
         <br>
-        <a href="/urls/new">click here to create your own!</a>
+
 
       </form>
     </li>
   <% } %>
+       <a href="/urls/new">click here to create your own!</a>
 
 
  </body>
