--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -16,6 +16,8 @@
     </form>
   </ul>
     <a href = "/urls">Link back URLs</a>
+    <br>
+    <a href = "/u/<%= shortURL %>" target="_blank"> updatedlink</a>
 
  </body>
 </html>
